--- a/src/routes/styles.css
+++ b/src/routes/styles.css
@@ -3,8 +3,8 @@
 :root {
 	--font-body: Arial, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu,
 		Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-	background-color: #18181b;
-	color: #fff;
+	background-color: #fff;
+	color: #18181b;
 }
 
 html,
