--- a/src/routes/styles.css
+++ b/src/routes/styles.css
@@ -26,3 +26,16 @@ body {
 	width: 100%;
 	height: 100%;
 }
+
+::-webkit-scrollbar {
+	width: 10px;
+}
+
+::-webkit-scrollbar-track {
+	background: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+	border-radius: 10px;
+	background: rgba(24, 24, 27, 0.2);
+}
