--- a/src/routes/styles.css
+++ b/src/routes/styles.css
@@ -1,41 +1,7 @@
-@import './normalize.css';
-
-:root {
-	--font-body: Arial, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu,
-		Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-	background-color: #fff;
-	color: #18181b;
-}
-
 html,
 body {
 	width: 100%;
 	height: 100%;
-	font-family: var(--font-body);
-}
-
-*,
-*::before,
-*::after {
-	box-sizing: border-box;
-}
-
-.root {
-	display: flex;
-	flex-direction: column;
-	width: 100%;
-	height: 100%;
-}
-
-::-webkit-scrollbar {
-	width: 10px;
-}
-
-::-webkit-scrollbar-track {
-	background: transparent;
-}
-
-::-webkit-scrollbar-thumb {
-	border-radius: 10px;
-	background: rgba(24, 24, 27, 0.2);
+	margin: 0;
+	padding: 0;
 }
