--- a/src/routes/styles.css
+++ b/src/routes/styles.css
@@ -5,3 +5,14 @@ body {
 	margin: 0;
 	padding: 0;
 }
+
+@keyframes fade-in-up {
+  from {
+    opacity: 0;
+    transform: translate3d(0, 20%, 0);
+  }
+  to {
+    opacity: 1;
+    transform: translate3d(0, 0, 0);
+  }
+}
