--- a/src/routes/styles.css
+++ b/src/routes/styles.css
@@ -1,10 +1,47 @@
-html,
-body {
+html {
 	width: 100%;
-	min-height: 100%;
-	margin: 0;
-	padding: 0;
+  height: 100%;
 }
+
+body {
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+}
+body::-webkit-scrollbar {
+  height: 0;
+}
+
+body {
+  overflow: overlay;
+  /* scrollbar-gutter: stable; */
+}
+
+*::-webkit-scrollbar-thumb,
+*::-webkit-scrollbar-thumb:hover {
+  background-color: transparent;
+  border:3px solid #e4e4e7;
+  border-radius: 5px;
+}
+
+*::-webkit-scrollbar {
+  width: 5px !important;
+  height: 5px !important;
+  background: #f4f4f5;
+}
+
+*::-webkit-scrollbar-thumb {
+  background: #b4b4bb;
+}
+
+*::-webkit-scrollbar-thumb:hover {
+  background: #b4b4bb;
+}
+
+*::-webkit-scrollbar-corner {
+  background: #f4f4f5;
+}
+
 
 @keyframes fade-in-up {
   from {
