--- a/src/routes/styles.css
+++ b/src/routes/styles.css
@@ -1,55 +1,43 @@
 html {
 	width: 100%;
-  height: 100%;
+	height: 100%;
+	overflow: hidden;
 }
 
 body {
-  width: 100%;
-  height: 100%;
-  overflow: auto;
-}
-body::-webkit-scrollbar {
-  height: 0;
-}
-
-body {
-  overflow: overlay;
-  /* scrollbar-gutter: stable; */
-}
-
-*::-webkit-scrollbar-thumb,
-*::-webkit-scrollbar-thumb:hover {
-  background-color: transparent;
-  border:3px solid #e4e4e7;
-  border-radius: 5px;
+	width: 100%;
+	height: 100%;
+	overflow-y: auto;
+	scrollbar-gutter: stable;
 }
 
 *::-webkit-scrollbar {
-  width: 5px !important;
-  height: 5px !important;
-  background: #f4f4f5;
+	width: 16px;
+}
+
+*::-webkit-scrollbar-track {
+	border-radius: 8px;
 }
 
 *::-webkit-scrollbar-thumb {
-  background: #b4b4bb;
+	height: 56px;
+	border-radius: 8px;
+	border: 4px solid transparent;
+	background-clip: content-box;
+	background-color: #888;
 }
 
 *::-webkit-scrollbar-thumb:hover {
-  background: #b4b4bb;
+	background-color: #555;
 }
-
-*::-webkit-scrollbar-corner {
-  background: #f4f4f5;
-}
-
 
 @keyframes fade-in-up {
-  from {
-    opacity: 0;
-    transform: translate3d(0, 20%, 0);
-  }
-  to {
-    opacity: 1;
-    transform: translate3d(0, 0, 0);
-  }
+	from {
+		opacity: 0;
+		transform: translate3d(0, 20%, 0);
+	}
+	to {
+		opacity: 1;
+		transform: translate3d(0, 0, 0);
+	}
 }
