--- a/src/routes/styles.css
+++ b/src/routes/styles.css
@@ -1,43 +1,22 @@
-html {
-	width: 100%;
-	height: 100%;
-	overflow: hidden;
-}
-
-body {
-	width: 100%;
-	height: 100%;
-	overflow-y: auto;
-	scrollbar-gutter: stable;
-}
-
 *::-webkit-scrollbar {
-	width: 16px;
-}
-
-*::-webkit-scrollbar-track {
-	border-radius: 8px;
+	@apply w-16px;
 }
 
 *::-webkit-scrollbar-thumb {
-	height: 56px;
-	border-radius: 8px;
-	border: 4px solid transparent;
-	background-clip: content-box;
-	background-color: #888;
+	@apply bg-gray-200 rounded-8px border-solid border-4px border-transparent bg-clip-content;
 }
 
 *::-webkit-scrollbar-thumb:hover {
-	background-color: #555;
+	@apply bg-gray-400;
 }
 
 @keyframes fade-in-up {
 	from {
 		opacity: 0;
-		transform: translate3d(0, 20%, 0);
+		transform: translate3d(0, 4%, 0) scale(0.95);
 	}
 	to {
 		opacity: 1;
-		transform: translate3d(0, 0, 0);
+		transform: translate3d(0, 0, 0) scale(1);
 	}
 }
