--- a/src/styles.css
+++ b/src/styles.css
@@ -43,8 +43,11 @@ html[data-theme='dark'] #sun-svg {
 }
 
 body {
-	@apply flex min-h-[100svh] flex-col bg-skin-fill text-skin-base 
-	selection:bg-skin-accent selection:bg-opacity-70 selection:text-skin-inverted;
+	@apply flex min-h-[100svh] flex-col bg-skin-fill text-skin-base;
+}
+
+body ::selection {
+	@apply bg-skin-accent bg-opacity-70 text-skin-inverted;
 }
 
 a {
@@ -63,7 +66,7 @@ a {
 		@apply !text-skin-base;
 	}
 	a {
-		@apply break-words hover:!text-skin-accent !text-skin-base !decoration-dashed underline-offset-8;
+		@apply break-words hover:!text-skin-accent !text-skin-base !decoration-dashed underline-offset-8 !underline-current;
 	}
 	blockquote {
 		@apply !border-l-skin-accent border-opacity-50 opacity-80;
