--- a/src/styles.css
+++ b/src/styles.css
@@ -3,6 +3,11 @@
 @tailwind utilities;
 
 @layer base {
+	:root {
+		--delay: 200ms;
+		--duration: 0.8s;
+	}
+
 	:root,
 	html[data-theme='light'] {
 		--color-fill: 251, 254, 251;
@@ -38,7 +43,7 @@
 	}
 
 	body {
-		@apply flex flex-col bg-skin-fill text-skin-base font-serif;
+		@apply flex flex-col bg-skin-fill font-serif text-skin-base;
 	}
 
 	body ::selection {
@@ -132,7 +137,7 @@
 @keyframes pop-in {
 	from {
 		opacity: 0;
-		transform: translate3d(0, 3%, 0) scale(0.96);
+		transform: translate3d(0, 6px, 0) scale(0.98);
 	}
 	to {
 		opacity: 1;
@@ -143,11 +148,11 @@
 @keyframes fade-in-up {
 	from {
 		opacity: 0;
-		transform: translate3d(0, 4%, 0);
+		transform: translateY(8px);
 	}
 	to {
 		opacity: 1;
-		transform: translate3d(0, 0, 0);
+		transform: translateY(0);
 	}
 }
 
