--- a/src/styles.css
+++ b/src/styles.css
@@ -17,6 +17,26 @@
 		--color-border: 236, 233, 233;
 	}
 
+	@media (prefers-color-schema: light) {
+		:root:not([data-theme='dark']) {
+			--color-fill: 251, 254, 251;
+			--color-text-base: 40, 39, 40;
+			--color-accent: 0, 108, 172;
+			--color-card: 230, 230, 230;
+			--color-card-muted: 205, 205, 205;
+			--color-border: 236, 233, 233;
+		}
+	}
+
+	:root[data-theme='dark'] {
+		--color-fill: 33, 39, 55;
+		--color-text-base: 234, 237, 243;
+		--color-accent: 255, 107, 1;
+		--color-card: 52, 63, 96;
+		--color-card-muted: 138, 51, 2;
+		--color-border: 171, 75, 8;
+	}
+
 	@media (prefers-color-scheme: dark) {
 		:root:not([data-theme='light']) {
 			--color-fill: 33, 39, 55;
