feat: add masonry layout, add husky and lint-staged

--- a/src/styles.css
+++ b/src/styles.css
@@ -93,8 +93,8 @@
 }
 
 @layer component {
-	.container {
-		@apply mx-auto w-full !max-w-[75rem];
+	.site-width {
+		@apply mx-auto w-full max-w-[75rem];
 	}
 }
 
